examples/canary/canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-demo
spec:
  ingressClassName: nginx
  rules:
  - host: canary.dev.dhc.house
    http:
      paths:
      - path: /
        backend:
          service:
            name: canary-demo
            port:
              number: 80
        pathType: Prefix
