examples/canary/canary-preview-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-demo-preview
spec:
  ingressClassName: nginx
  rules:
  - host: canary-preview.dev.dhc.house
    http:
      paths:
      - path: /
        backend:
          service:
            name: canary-demo-preview
            port:
              number: 80
        pathType: Prefix
